@@ -409,6 +409,10 @@ class TestDMLSync:
         document0b = cursor0b.__next__()
         assert "ternary" in document0b
 
+        assert cursor0b.data_source == sync_empty_collection
+        with pytest.warns(DeprecationWarning):
+            assert cursor0b.collection == sync_empty_collection
+
         # rewinding, slicing and retrieved
         cursor1 = sync_empty_collection.find(sort={"seq": 1})
         cursor1.__next__()
